// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractActions should not show the dispute sliders when there is no dispute winner 1`] = `
<View
  style={
    [
      {
        "gap": 12,
      },
      undefined,
    ]
  }
>
  <ContractCTA
    actionPending={false}
    postConfirmPaymentBuyer={[MockFunction]}
    postConfirmPaymentSeller={[MockFunction]}
    requiredAction="none"
  />
</View>
`;

exports[`ContractActions should show the dispute sliders when the contract is in the refundOrReviveRequired state 1`] = `
<View
  style={
    [
      {
        "gap": 12,
      },
      undefined,
    ]
  }
>
  <ContractCTA
    actionPending={false}
    postConfirmPaymentBuyer={[MockFunction]}
    postConfirmPaymentSeller={[MockFunction]}
    requiredAction="none"
  />
  <ResolveDisputeSliders />
</View>
`;
